fix home page font sizes on mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -288,6 +288,14 @@ footer a {
 
 @media only screen and (max-width:600px) {
 
+    /* HOME */
+    #home-page-heading {
+        font-size: 3em;
+    }
+
+    #home-page-self-intro {
+        font-size: 2em;
+    }
     /* NAV */
     nav {
         width: 100%;
